# compilation-comparison

./: README.md
cabal/: Makefile  my-server.cabal
cabal-split-objs/: Makefile  my-server.cabal
cabal-split-objs/builtin_packages/: Cabal-1.18.1.5-6478013104bde01737bfd67d34bbee0a.conf  base-4.7.0.2-bfd89587617e381ae01b8dd7b6c7f1c1.conf  base-4.9.1.0.conf  builtin_rts.conf  ghc-prim-0.3.1.0-a24f9c14c632d75b683d0f93283aea37.conf  integer-gmp-0.5.1.0-26579559b3647acf4f01d5edd9491a46.conf  rts.conf  template-haskell-2.9.0.0-6d27c2b362b15abb1822f2f34b9ae7f9.conf
cabal/builtin_packages/: Cabal-1.24.2.0.conf  ghc-prim-0.5.0.0.conf  integer-gmp-1.0.0.1.conf  template-haskell-2.11.1.0.conf
fragnix-main-hs/: Makefile
fragnix-star-hs/: Makefile
fragnix-star-hs/src/: Data.Scientific.hs  Network.Socket.ByteString.IOVec.hs  Network.Socket.ByteString.hs  Network.Socket.Internal.hs  Network.Socket.hs  Paths_transformers_compat.hs  System.Directory.Internal.Windows.hs  System.Posix.ByteString.FilePath.hs  System.Posix.DynamicLinker.Module.ByteString.hs  System.Posix.DynamicLinker.Module.hs  System.Posix.Env.ByteString.hs  System.Posix.Files.Common.hs  System.Posix.Process.Common.hs  System.Posix.Process.hs  System.Posix.Semaphore.hs  System.Posix.Signals.Exts.hs  System.Posix.Temp.hs  System.Posix.Terminal.Common.hs  System.PosixCompat.Extensions.hs  System.PosixCompat.User.hs
ghc/: Makefile
ghc-main-hs/: Makefile
ghc-main-hs/cbits/: timeUtils.c
ghc-main-hs/src/: Paths_warp.hs
ghc-star-hs/: Makefile
ghc-star-hs/include/: cabal_macros.h
stack/: Makefile  stack.yaml
(+23821 files in other folders)
