name:                my-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-server
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       scotty ==0.11.0
  hs-source-dirs:      src
  default-language:    Haskell2010