name:                my-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-server
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       scotty >=0.9.1 && <0.10
  hs-source-dirs:      src
  default-language:    Haskell2010